# automated-trading-bot

./: .gitignore  MA Long Signal Indicator @prablordeppey  Makefile  README.md  main.ipynb  pyproject.toml  requirements.txt  todo.md
.github/workflows/: CI.yaml
bot/: __main__.py  main.py
bot/schemas/: get_exchangeurls_schema.py  get_tradablepairs_schema.py
objectives/: bot_summary.md  indicator_strategies.md  trading_lifestyle.md
objectives/asset_selection/: volume+vwap.md
objectives/exchanges/: binance.md
tests/unittests/schemas/: test_get_exchangeurls_schema.py  test_get_tradablepairs_schema.py
