[tool.poetry]
name = "automated-trading-bot"
version = "0.1.0"
description = "An auto-trading bot"
authors = ["icetee4eva <30740369+prablordeppey@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ruff = "^0.1.11"
fastapi = "^0.105.0"
jinja2 = "3.1.2"
uvicorn = "^0.22.0"
pydantic = "^2.5.2"
fastapi-mail = "^1.2.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
ruff = "^0.1.11"

[tool.ruff]
# Set the maximum line length to 79.
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
target-dir = "build/distribution"


